[package]
name = "erebus_scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
csv = "1.3"
quick-xml = { version = "0.31", features = ["serialize"] }
ipnet = "2.9"
pnet = "0.34"
hickory-resolver = "0.24"
reqwest = { version = "0.11", features = ["json"] }
tokio-socks = "0.5.1"